# topdrawer-mcp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: test.yml
data/: topdrawer.txt
data/lookup/: command-lookup-reviewed.json  command-lookup-targets.json
data/reference/: set-window-reference.json  symbol-codes.json  texture-styles.json
data/samples/: catalog.json
docs/: development-workflow.md  source-policy.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-06-02-contributing-guide.md  2026-06-03-set-order-set-font-sample-coverage.md  2026-06-06-mcp-resource-prompt-surface-redesign.md  2026-06-06-script-command-scan-simplification.md  2026-06-06-superpowers-documentation-index.md  2026-06-07-agent-workflow-validation-scenario-assets.md  2026-06-10-agent-workflow-evaluation-notes-guide.md  2026-06-14-narrow-reverse-command-lookup-implementation.md  2026-06-14-release-workflow-documentation.md
src/topdrawer_mcp/: artifacts.py  command_lookup.py  reference_data.py  render.py  reverse_lookup.py  runtime_info.py  sample_catalog.py  script_scan.py  server.py
tests/: conftest.py
tests/integration/: test_inspector_cli.py  test_render_fixtures.py  test_render_tool.py
tests/unit/: test_artifacts.py  test_command_lookup.py  test_reference_data.py  test_render.py  test_reverse_lookup.py  test_runtime_info.py  test_sample_catalog.py  test_script_scan.py  test_script_scan_fixtures.py  test_server.py  test_workflow_validation_assets.py
(+41 files in other folders)
