[project]
name = "topdrawer-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
topdrawer-mcp = "topdrawer_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
