[project]
name = "topdrawer-mcp"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
topdrawer-mcp = "topdrawer_mcp.server:main"
topdrawer-mcp-preprocess = "topdrawer_mcp.preprocess.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "unit: fast tests that exercise Python functions directly",
    "integration: tests that run external processes or MCP clients",
]
